--- a/city_config.json
+++ b/city_config.json
@@ -86,7 +86,7 @@
       "fight_back": 0.01,
       "collapse": 0.1,
       "rise": 0.1},
-  "income_probs":
+  "income_prob":
   {
     "low": 0.5,
     "high": 0.1}
