--- a/play_config.json
+++ b/play_config.json
@@ -1,10 +1,10 @@
 {
-  "mode": "train",
-  "who": "machine",
-  "demo": 0,
-  "num_steps": 5000000,
-  "num_envs": 256,
+  "mode": "play",
+  "who": "human",
+  "demo": 1,
+  "num_steps": 1000,
+  "num_envs": 1,
   "max_turns": 14,
-  "train_collection_interval": 1400,
+  "train_collection_interval": 14,
   "play_collection_interval": 1
 }
