--- a/play_config.json
+++ b/play_config.json
@@ -1,10 +1,10 @@
 {
-  "mode": "train",
+  "mode": "play",
   "who": "machine",
-  "demo": 1,
-  "num_steps": 1000,
-  "num_envs": 1,
+  "demo": 0,
+  "num_steps": 2000000,
+  "num_envs": 300,
   "max_turns": 14,
-  "train_collection_interval": 14,
+  "train_collection_interval": 1400,
   "play_collection_interval": 1
 }
