--- a/city_config.json
+++ b/city_config.json
@@ -68,7 +68,7 @@
       "zombie_weight": 0.01,
       "dead_weight": 0.02,
       "ashen_weight": 0.05,
-      "resource_weight": 0.07}
+      "resource_weight": 0.07},
   "spawn_chances":
     { "income_multiplier": 1.2,
       "zombie": 0.9,
